feat(cli): 实现协议 7 同帧操作共享与记录模板
实现 UI、操作和背包的可逆同帧模板及节点操作引用，所有视图共享结构格式；保留诊断、来源、历史和不确定结果边界。升级 CLI.7.0.0、protocol 7、schema 10 与独立 v7 profile，不兼容旧格式、不迁移旧目录。

验证：558 项 Java 和 246 项 Python 测试通过；两组公开语料完成 11700 次 Java 往返及 11700 次 Python 内容核对，组合 token 分别减少 1.01% 和 23.52%；实际 ARM64 包、schema 1–9 拒写、31 次控制器请求及保存重启验收通过。

未进行完整通关、真实传输丢失注入、独立终端窗口 UI 交互或公证发布；未读取个人存档，保留原 stash，不推送或打标签。